--- a/css/base.css
+++ b/css/base.css
@@ -239,14 +239,14 @@ p strong {
     text-transform: uppercase;
 }
 p span {
-    display: block;
+    /* display: block; */
     position: relative;
     top: -4px;
 }
-p span,
+/* p span,
 li span {
     font-size: 13px;
-}
+} */
 p,
 blockquote {
     line-height: 25px;
@@ -318,7 +318,7 @@ section,
     -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
     -ms-border-radius: 6px;
-    -o-border-radius: : 6px;
+    -o-border-radius: 6px;
 }
 .indent {
     text-indent: -999px;
@@ -430,7 +430,7 @@ input[type="submit"] textarea,
     -webkit-border-radius: 25px;
     -moz-border-radius: 25px;
     -ms-border-radius: 25px;
-    -o-border-radius: : 25px;
+    -o-border-radius: 25px;
 }
 a.link {
     position: relative;
