--- a/css/main.css
+++ b/css/main.css
@@ -153,10 +153,9 @@ section.single-hero {
     background-attachment: scroll;
     background-clip: border-box;
     background-color: #353031;
-    background-image: none;
     background-origin: padding-box;
-    background-position: 50% 50% !important;
-    background-repeat: repeat;
+    background-position: 50% 30% !important;
+    background-repeat: no-repeat;
     background-size: cover !important;
     height: 100%;
     left: 0;
@@ -864,7 +863,9 @@ select.error {
 
 
 /* Gallery section*/
-
+.register {
+    height: 500px;
+}
 .block-gallery li {
     opacity: .45;
     position: relative;
