--- a/css/modal.css
+++ b/css/modal.css
@@ -47,7 +47,7 @@
     padding: 2em;
     background: rgb(255, 255, 255);
     overflow: auto;
-    height: calc(100% - 7rem);
+    height: 300px;
     padding-top: 3rem;
     box-shadow: rgba(0, 0, 0, 0.25) 0 0 1rem;
 }
